--- a/index.html
+++ b/index.html
@@ -15,33 +15,33 @@
     <nav class="header-nav">
       <span class="logo">haiderzaidi</span>
       <ul class="social-links">
-        <li class="github"><a href="https://github.com/haiderzaidi07" target="_blank" rel="noopener" title="Github">
+        <li class="github"><a href="https://github.com/haiderzaidi07" target="_blank" rel="noopener noreferrer" title="Github">
           <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M12.3035 0C5.50583 0 0 5.50583 0 12.3035C0 17.7478 3.52188 22.3463 8.41254 23.9765C9.02771 24.0842 9.2584 23.715 9.2584 23.3921C9.2584 23.0999 9.24302 22.131 9.24302 21.1005C6.15176 21.6696 5.35203 20.347 5.10596 19.6549C4.96755 19.3012 4.36775 18.2092 3.84485 17.917C3.41423 17.6863 2.79905 17.1173 3.82947 17.1019C4.79838 17.0865 5.49045 17.9939 5.72114 18.363C6.82846 20.2239 8.59709 19.701 9.30454 19.3781C9.4122 18.5783 9.73516 18.04 10.0889 17.7325C7.35136 17.4249 4.49079 16.3637 4.49079 11.6576C4.49079 10.3196 4.96755 9.21227 5.7519 8.35102C5.62886 8.04343 5.19824 6.78232 5.87493 5.09058C5.87493 5.09058 6.90535 4.76762 9.2584 6.3517C10.2427 6.07487 11.2885 5.93645 12.3343 5.93645C13.3801 5.93645 14.4259 6.07487 15.4102 6.3517C17.7632 4.75224 18.7936 5.09058 18.7936 5.09058C19.4703 6.78232 19.0397 8.04343 18.9167 8.35102C19.701 9.21227 20.1778 10.3042 20.1778 11.6576C20.1778 16.3791 17.3018 17.4249 14.5643 17.7325C15.0103 18.1169 15.3948 18.8552 15.3948 20.0086C15.3948 21.6542 15.3794 22.9768 15.3794 23.3921C15.3794 23.715 15.6101 24.0995 16.2253 23.9765C18.6676 23.1519 20.79 21.5821 22.2936 19.4882C23.7972 17.3941 24.6063 14.8814 24.6071 12.3035C24.6071 5.50583 19.1012 0 12.3035 0Z"
               fill="currentColor"/>
           </svg>   
         </a></li>
     
-        <li class="linkedin"><a href="https://linkedin.com/in/haider-zaidi-" target="_blank" rel="noopener" title="Linkedin">
+        <li class="linkedin"><a href="https://linkedin.com/in/haider-zaidi-" target="_blank" rel="noopener noreferrer" title="Linkedin">
           <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M5.5513 3.3042C4.41165 3.3042 3.48447 4.23017 3.48447 5.36833C3.48447 6.50724 4.41165 7.4338 5.5513 7.4338C6.68872 7.4338 7.61408 6.50724 7.61408 5.36833C7.61408 4.23017 6.68872 3.3042 5.5513 3.3042ZM3.76655 8.99818V20.4515H7.32916L7.33051 8.99818H3.76655ZM9.56465 8.99713V20.4503L13.1192 20.4517L13.1206 14.7845C13.1206 13.3298 13.3739 11.8429 15.2535 11.8429C17.1044 11.8429 17.1044 13.5976 17.1044 14.879V20.4503L20.6629 20.449V14.1689C20.6629 11.3348 20.1456 8.71224 16.3929 8.71224C14.6304 8.71224 13.4769 9.70851 13.0247 10.5618H12.9747L12.9747 8.99713H9.56465ZM22.4355 24H1.98187C1.00598 24 0.212036 23.223 0.212036 22.268V1.73068C0.212036 0.776376 1.00598 0 1.98187 0H22.4355C23.4151 0 24.212 0.776376 24.212 1.73068V22.268C24.212 23.223 23.4151 24 22.4355 24Z"
             fill="currentColor"/>
           </svg>
         </a></li>
 
-        <li class="upwork"><a href="https://www.upwork.com/freelancers/~01a3f0ce9018fb42b6" target="_blank" rel="noopener" title="Upwork">
+        <!-- <li class="upwork"><a href="https://www.upwork.com/freelancers/~01a3f0ce9018fb42b6" target="_blank" rel="noopener noreferrer" title="Upwork">
           <svg width="26" height="25" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <path d="M18.561 13.158c-1.102 0-2.135-.467-3.074-1.227l.228-1.076.008-.042c.207-1.143.849-3.06 2.839-3.06 1.492 0 2.703 1.212 2.703 2.703-.001 1.489-1.212 2.702-2.704 2.702zm0-8.14c-2.539 0-4.51 1.649-5.31 4.366-1.22-1.834-2.148-4.036-2.687-5.892H7.828v7.112c-.002 1.406-1.141 2.546-2.547 2.548-1.405-.002-2.543-1.143-2.545-2.548V3.492H0v7.112c0 2.914 2.37 5.303 5.281 5.303 2.913 0 5.283-2.389 5.283-5.303v-1.19c.529 1.107 1.182 2.229 1.974 3.221l-1.673 7.873h2.797l1.213-5.71c1.063.679 2.285 1.109 3.686 1.109 3 0 5.439-2.452 5.439-5.45 0-3-2.439-5.439-5.439-5.439z"
             fill="currentColor"></path></svg>
-        </a></li>
+        </a></li> -->
       </ul>
     </nav>
   </header>
 
   <main>
     <section class="hero">
-      <h1 class="hero-title">Hello, I'm <span class="hero-name">Haider Zaidi</span>,<br>Turning Visions into Seamless Reality.</h1>
-      <p class="hero-description">With a meticulous blend of creativity and technical expertise, I specialize in transforming your visionary ideas into stunning digital experiences. From intuitive user interfaces to robust backend functionalities, I'll bring your dreams to life with precision and finesse.</p>
+      <h1 class="hero-title">Hello, I'm <span class="hero-name">Haider Zaidi</span>,<br>Engineering Solutions for a Better World.</h1>
+      <p class="hero-description">Dedicated to leveraging technology for positive impact, I specialize in creating software solutions that address real-world issues. Let's collaborate to turn ideas into action.</p>
       <a href="#contact">
         <button type="button" class="contact-button">CONTACT ME</button>
       </a>
@@ -52,28 +52,28 @@
     <section class="technologies">
       <ul>
         <li class="tech">
-          <h4 class="tech-title">HTML</h4>
-          <p class="tech-exp">750+ Hours Experience</p>
-        </li>
-        <li class="tech">
-          <h4 class="tech-title">CSS</h4>
-          <p class="tech-exp">750+ Hours Experience</p>
-        </li>
-        <li class="tech">
-          <h4 class="tech-title">JavaScript</h4>
-          <p class="tech-exp">750+ Hours Experience</p>
-        </li>
-        <li class="tech">
           <h4 class="tech-title">Node.js</h4>
-          <p class="tech-exp">750+ Hours Experience</p>
+          <p class="tech-exp">2+ Years Experience</p>
         </li>
         <li class="tech">
-          <h4 class="tech-title">MongoDB</h4>
-          <p class="tech-exp">750+ Hours Experience</p>
+          <h4 class="tech-title">Express</h4>
+          <p class="tech-exp">2+ Years Experience</p>
         </li>
         <li class="tech">
           <h4 class="tech-title">React</h4>
-          <p class="tech-exp">500+ Hours Experience</p>
+          <p class="tech-exp">1.5+ Years Experience</p>
+        </li>
+        <li class="tech">
+          <h4 class="tech-title">MongoDB</h4>
+          <p class="tech-exp">1.5+ Years Experience</p>
+        </li>
+        <li class="tech">
+          <h4 class="tech-title">TypeScript</h4>
+          <p class="tech-exp">0.5+ Years Experience</p>
+        </li>
+        <li class="tech">
+          <h4 class="tech-title">Tailwind</h4>
+          <p class="tech-exp">0.5+ Years Experience</p>
         </li>
       </ul>
     </section>
@@ -91,18 +91,18 @@
 
       <div class="flex-container-2">
         <div class="project">
-          <img src="assets/strategik.gif" alt="StrateGIK" class="project-image">
+          <img src="assets/strategik-new.gif" alt="StrateGIK" class="project-image">
           <h3 class="project-title">StrateGIK</h3>
           <ul class="project-tech">
-            <li>MongoDB</li>
-            <li>Node.js</li>
-            <li>React</li>
+            <li>MERN</li>
             <li>Tailwind</li>
+            <li>JWT</li>
+            <li>Cloudinary</li>
           </ul>
-          <a href="#">
+          <a href="https://strategik.netlify.app/" target="_blank" rel="noopener noreferrer">
             <button type="button" class="view-project">VIEW PROJECT</button>
           </a>
-          <a href="https://github.com/haiderzaidi07/strategik-beta" target="_blank" rel="noopener">
+          <a href="https://github.com/haiderzaidi07/strategik-beta" target="_blank" rel="noopener noreferrer">
             <button type="button" class="view-code">VIEW CODE</button>
           </a>
         </div>
@@ -115,38 +115,43 @@
             <li>React</li>
             <li>Tailwind</li>
           </ul>
-          <a href="#">
+          <a href="https://github.com/haiderzaidi07/dehari-frontend" target="_blank" rel="noopener noreferrer">
             <button type="button" class="view-project">VIEW PROJECT</button>
           </a>
-          <a href="#">
+          <a href="https://github.com/haiderzaidi07/dehari-backend" target="_blank" rel="noopener noreferrer">
             <button type="button" class="view-code">VIEW CODE</button>
           </a>
         </div>
         <div class="project">
-          <img src="assets/portfolio.gif" alt="Portfolio Website" class="project-image">
-          <h3 class="project-title">Portfolio Website</h3>
+          <img src="assets/algoviz.gif" alt="AlgoViz" class="project-image">
+          <h3 class="project-title">AlgoViz</h3>
           <ul class="project-tech">
-            <li>HTML</li>
-            <li>CSS</li>
+            <li>React</li>
+            <li>TypeScript</li>
+            <li>Tailwind</li>
+            <li>D3.js</li>
           </ul>
-          <a href="#">
+          <a href="https://algovyz.netlify.app/" target="_blank" rel="noopener noreferrer">
             <button type="button" class="view-project">VIEW PROJECT</button>
           </a>
-          <a href="#">
+          <a href="https://github.com/haiderzaidi07/algoviz" target="_blank" rel="noopener noreferrer">
             <button type="button" class="view-code">VIEW CODE</button>
           </a>
         </div>
         <div class="project">
-          <img src="assets/clipboard.gif" alt="Clipboard Landing Page" class="project-image">
-          <h3 class="project-title">Clipboard Landing Page</h3>
+          <img src="assets/tierlist-new.gif" alt="Tier List" class="project-image">
+          <h3 class="project-title">Tier List</h3>
           <ul class="project-tech">
-            <li>HTML</li>
-            <li>CSS</li>
+            <li>MERN</li>
+            <li>Redux</li>
+            <li>Tailwind</li>
+            <li>JWT</li>
+            <li>Passport.js</li>
           </ul>
-          <a href="#">
+          <a href="https://tier-list.netlify.app" target="_blank" rel="noopener noreferrer">
             <button type="button" class="view-project">VIEW PROJECT</button>
           </a>
-          <a href="#">
+          <a href="https://github.com/haiderzaidi07/tier-list-backend" target="_blank" rel="noopener noreferrer">
             <button type="button" class="view-code">VIEW CODE</button>
           </a>
         </div>
@@ -178,28 +183,28 @@
       <span class="logo">haiderzaidi</span>
 
       <ul class="social-links">
-        <li class="github"><a href="https://github.com/haiderzaidi07" target="_blank" rel="noopener" title="Github">
+        <li class="github"><a href="https://github.com/haiderzaidi07" target="_blank" rel="noopener noreferrer" title="Github">
           <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M12.3035 0C5.50583 0 0 5.50583 0 12.3035C0 17.7478 3.52188 22.3463 8.41254 23.9765C9.02771 24.0842 9.2584 23.715 9.2584 23.3921C9.2584 23.0999 9.24302 22.131 9.24302 21.1005C6.15176 21.6696 5.35203 20.347 5.10596 19.6549C4.96755 19.3012 4.36775 18.2092 3.84485 17.917C3.41423 17.6863 2.79905 17.1173 3.82947 17.1019C4.79838 17.0865 5.49045 17.9939 5.72114 18.363C6.82846 20.2239 8.59709 19.701 9.30454 19.3781C9.4122 18.5783 9.73516 18.04 10.0889 17.7325C7.35136 17.4249 4.49079 16.3637 4.49079 11.6576C4.49079 10.3196 4.96755 9.21227 5.7519 8.35102C5.62886 8.04343 5.19824 6.78232 5.87493 5.09058C5.87493 5.09058 6.90535 4.76762 9.2584 6.3517C10.2427 6.07487 11.2885 5.93645 12.3343 5.93645C13.3801 5.93645 14.4259 6.07487 15.4102 6.3517C17.7632 4.75224 18.7936 5.09058 18.7936 5.09058C19.4703 6.78232 19.0397 8.04343 18.9167 8.35102C19.701 9.21227 20.1778 10.3042 20.1778 11.6576C20.1778 16.3791 17.3018 17.4249 14.5643 17.7325C15.0103 18.1169 15.3948 18.8552 15.3948 20.0086C15.3948 21.6542 15.3794 22.9768 15.3794 23.3921C15.3794 23.715 15.6101 24.0995 16.2253 23.9765C18.6676 23.1519 20.79 21.5821 22.2936 19.4882C23.7972 17.3941 24.6063 14.8814 24.6071 12.3035C24.6071 5.50583 19.1012 0 12.3035 0Z"
               fill="currentColor"/>
           </svg>   
         </a></li>
     
-        <li class="linkedin"><a href="https://linkedin.com/in/haider-zaidi-" target="_blank" rel="noopener" title="Linkedin">
+        <li class="linkedin"><a href="https://linkedin.com/in/haider-zaidi-" target="_blank" rel="noopener noreferrer" title="Linkedin">
           <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M5.5513 3.3042C4.41165 3.3042 3.48447 4.23017 3.48447 5.36833C3.48447 6.50724 4.41165 7.4338 5.5513 7.4338C6.68872 7.4338 7.61408 6.50724 7.61408 5.36833C7.61408 4.23017 6.68872 3.3042 5.5513 3.3042ZM3.76655 8.99818V20.4515H7.32916L7.33051 8.99818H3.76655ZM9.56465 8.99713V20.4503L13.1192 20.4517L13.1206 14.7845C13.1206 13.3298 13.3739 11.8429 15.2535 11.8429C17.1044 11.8429 17.1044 13.5976 17.1044 14.879V20.4503L20.6629 20.449V14.1689C20.6629 11.3348 20.1456 8.71224 16.3929 8.71224C14.6304 8.71224 13.4769 9.70851 13.0247 10.5618H12.9747L12.9747 8.99713H9.56465ZM22.4355 24H1.98187C1.00598 24 0.212036 23.223 0.212036 22.268V1.73068C0.212036 0.776376 1.00598 0 1.98187 0H22.4355C23.4151 0 24.212 0.776376 24.212 1.73068V22.268C24.212 23.223 23.4151 24 22.4355 24Z"
             fill="currentColor"/>
           </svg>
         </a></li>
 
-        <li class="upwork"><a href="https://www.upwork.com/freelancers/~01a3f0ce9018fb42b6" target="_blank" rel="noopener" title="Upwork">
+        <!-- <li class="upwork"><a href="https://www.upwork.com/freelancers/~01a3f0ce9018fb42b6" target="_blank" rel="noopener noreferrer" title="Upwork">
           <svg width="26" height="25" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <path d="M18.561 13.158c-1.102 0-2.135-.467-3.074-1.227l.228-1.076.008-.042c.207-1.143.849-3.06 2.839-3.06 1.492 0 2.703 1.212 2.703 2.703-.001 1.489-1.212 2.702-2.704 2.702zm0-8.14c-2.539 0-4.51 1.649-5.31 4.366-1.22-1.834-2.148-4.036-2.687-5.892H7.828v7.112c-.002 1.406-1.141 2.546-2.547 2.548-1.405-.002-2.543-1.143-2.545-2.548V3.492H0v7.112c0 2.914 2.37 5.303 5.281 5.303 2.913 0 5.283-2.389 5.283-5.303v-1.19c.529 1.107 1.182 2.229 1.974 3.221l-1.673 7.873h2.797l1.213-5.71c1.063.679 2.285 1.109 3.686 1.109 3 0 5.439-2.452 5.439-5.45 0-3-2.439-5.439-5.439-5.439z"
             fill="currentColor"></path></svg>
-        </a></li>
+        </a></li> -->
       </ul>
     </nav>
-    <h5 class="copyright">Copyright © Haider Zaidi 2023</h5>
+    <h5 class="copyright">Developed by <a href="#" class="site-link">Haider Zaidi</a></h5>
   </footer>
 
 </body>
